[gd_scene load_steps=2 format=3 uid="uid://g1g2g3g4g5g6"]

[ext_resource type="Script" path="res://scripts/battle/battle.gd" id="1_abcde"]

[node name="Battle" type="CanvasLayer"]
script = ExtResource("1_abcde")

[node name="Player1" type="Node2D" parent="."]
position = Vector2(200, 300)

[node name="Sprite" type="TextureRect" parent="Player1"]
offset_right = 128.0
offset_bottom = 128.0
expand_mode = 1
stretch_mode = 5

[node name="HPLabel" type="Label" parent="Player1"]
offset_top = 140.0
offset_right = 128.0
offset_bottom = 163.0
text = "HP: 10/10"
horizontal_alignment = 1

[node name="Player2" type="Node2D" parent="."]
position = Vector2(350, 300)

[node name="Sprite" type="TextureRect" parent="Player2"]
offset_right = 128.0
offset_bottom = 128.0
expand_mode = 1
stretch_mode = 5

[node name="HPLabel" type="Label" parent="Player2"]
offset_top = 140.0
offset_right = 128.0
offset_bottom = 163.0
text = "HP: 10/10"
horizontal_alignment = 1

[node name="Player3" type="Node2D" parent="."]
position = Vector2(500, 300)

[node name="Sprite" type="TextureRect" parent="Player3"]
offset_right = 128.0
offset_bottom = 128.0
expand_mode = 1
stretch_mode = 5

[node name="HPLabel" type="Label" parent="Player3"]
offset_top = 140.0
offset_right = 128.0
offset_bottom = 163.0
text = "HP: 10/10"
horizontal_alignment = 1

[node name="Enemy1" type="Node2D" parent="."]
position = Vector2(800, 100)

[node name="Sprite" type="TextureRect" parent="Enemy1"]
offset_right = 128.0
offset_bottom = 128.0
expand_mode = 1
stretch_mode = 5

[node name="HPLabel" type="Label" parent="Enemy1"]
offset_top = 140.0
offset_right = 128.0
offset_bottom = 163.0
text = "HP: 10/10"
horizontal_alignment = 1

[node name="Enemy2" type="Node2D" parent="."]
position = Vector2(950, 100)

[node name="Sprite" type="TextureRect" parent="Enemy2"]
offset_right = 128.0
offset_bottom = 128.0
expand_mode = 1
stretch_mode = 5

[node name="HPLabel" type="Label" parent="Enemy2"]
offset_top = 140.0
offset_right = 128.0
offset_bottom = 163.0
text = "HP: 10/10"
horizontal_alignment = 1

[node name="Enemy3" type="Node2D" parent="."]
position = Vector2(1100, 100)

[node name="Sprite" type="TextureRect" parent="Enemy3"]
offset_right = 128.0
offset_bottom = 128.0
expand_mode = 1
stretch_mode = 5

[node name="HPLabel" type="Label" parent="Enemy3"]
offset_top = 140.0
offset_right = 128.0
offset_bottom = 163.0
text = "HP: 10/10"
horizontal_alignment = 1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AttackButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 500.0
offset_top = 500.0
offset_right = 600.0
offset_bottom = 550.0
text = "Attack"

[connection signal="pressed" from="UI/AttackButton" to="." method="_on_attack_button_pressed"]
